# imgui-hmi

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  deploy-cmake-multi-platform.yml
App/: CMakeLists.txt  glfw.cpp  glfw.hpp  globals.hpp  i_screen.hpp  i_widget.hpp  imgui.hpp  main.cpp  spec.hpp
App/backend/: glfw.cpp
App/imgui/: IMGUI.hpp  IMGUImpl.hpp  font.hpp  imgui.hpp  layout.hpp  spec.hpp  widgets.hpp
App/imgui/widgets/: button.hpp  i_widget.hpp  image_button.hpp  input_text.hpp  text_view.hpp  widgets.hpp  widgets_wrapper.hpp
App/screens/: fsm.hpp  i_screen.hpp  screen_1.hpp  screen_2.hpp  screen_3.hpp  screen_4.hpp  screen_5.hpp  screen_manager.hpp
App/widgets/: button.hpp  i_widget.hpp  image.hpp  image_button.hpp  input_text.hpp  text_input.hpp  text_view.hpp  widgets.hpp
Core/: CMakeLists.txt  glfw.cpp  glfw.hpp  i_screen.hpp  i_widget.hpp  image.hpp  imgui.hpp  logger.hpp  spec.hpp  utils.hpp
Core/widgets/: button.hpp  i_widget.hpp  image.hpp
Database/: docker-compose-database.service  docker-compose.yml
_cmake/: IMGUI.cmake  bcrypt.cmake  beagleplay.cmake  catch2.cmake  core.cmake  fakeit.cmake  glfw3.cmake  opengl.cmake  options.cmake  rpi4.cmake  spdlog.cmake  sqlite3.cmake  stb.cmake  vulkan.cmake
_docs/: beagleplay.md  dependencies.md  postgresql.md  preempt_rt.md  toolchain.md
app/: CMakeLists.txt  globals.hpp  main.cpp
app/backend/: glfw.cpp  glfw.hpp
app/imgui/: IMGUI.hpp  IMGUImpl.hpp  font.hpp  layout.hpp  style_color.hpp
app/screens/: i_screen.hpp  screen_1.hpp  screen_2.hpp  screen_3.hpp  screen_4.hpp  screen_5.hpp  screen_manager.hpp
app/widgets/: base_widget.hpp  button.hpp  i_widget.hpp  image.hpp  image_button.hpp  input_text.hpp  text_view.hpp  widgets.hpp  wrapper.hpp
core/: CMakeLists.txt  connection_pool.hpp  logger.hpp  sqlite.hpp  user.hpp  user_manager.hpp  utils.hpp
core/database/: database.hpp  spec.hpp  sqlite.hpp
core/network/: connection_pool.hpp
core/utils/: math.hpp  uuid.hpp
tests/: CMakeLists.txt  main.cpp  tc_button.cpp  tc_database.cpp  tc_fsm.cpp  tc_image.cpp  tc_screen_manager.cpp  tc_sqlite.cpp  tc_text_view.cpp  tc_user_manager.cpp  tc_users.cpp  tc_utils_math.cpp  tc_uuid.cpp  test_cases.cpp
